Fix clipping

--- a/src/styles.css
+++ b/src/styles.css
@@ -40,6 +40,7 @@
 
     .footer-container {
         height: 180px;
+        background-color: black;
     }
 
     .sm-link {
